# oaconvert

./: .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  INSTALL  README  TODO  astyle_options  create_setup.nsi
airspaces/: beauvechain_tma4.txt  brussels_cta_east3.txt  brussels_cta_west1.txt  brussels_tma5.txt  charleroi_ctr.txt  florennes_ctr.txt  liege_ctr.txt
cgpsmapper/: Airspace.txt  Airspace_chessboard.txt  Airspace_completely_filled.txt  MyCustomTypes.txt  Typefile_rene.txt  create_garmin_maps.sh  makemap.sh  makemaps.sh  makemaps_combined.sh  makemaps_individual.sh  mypreview.mp  typ_file_bart_chessboard.txt  typ_file_bart_completely_filled.txt  typ_file_rene.txt
doc/: aip_sources.txt  airspace_coloring.dot  airspace_types.txt  basecamp.txt  belgian_borders.txt  cgpsmapper.txt  character_problems.txt  coding_style.txt  debugging.txt  eaip_parsing.txt  garmin_img.txt  interesting_libraries.txt  issues_rene.txt  kml.txt  mapsource.txt  notes_oa2gm.txt  oaconvert_movie_text.txt  openair_device_restrictions.txt  parser.txt  parsing.txt  precision.txt  qlandkarte.txt  regular_expressions.txt  sent_emails.txt  similar_software.txt  standards.txt  typ_files.txt
doc/icons/: ctr.asy  notam.asy
man/: oaconvert.1
openair/: map_edges.txt
openair/australia/: README.TXT
openair/belgium/: Bertrix_Sporting.txt  Brasschaat_Sporting.txt  Cerfontaine_Area1_Sporting.txt  Geraardsbergen_Sporting.txt  Grinlay_Sporting.txt  Hoevenen_Sporting.txt  Humain_Sporting.txt  Konz_Sporting.txt  Leopoldsburg_Sporting.txt  Meeuwen_Gruitrode_Sporting.txt  Moorsele_Sporting.txt  Namur_Area1_Sporting.txt  Namur_Area2_Sporting.txt  README.TXT  Spa_Area1_Sporting.txt  Spa_Area2_Sporting.txt  St_Hubert_Sporting.txt  Useldange_Gliber_Corridor_Sporting.txt  Zoersel_Sporting.txt  aerobatic_sector_danger.txt  antwerpen_ctr.txt  ardennes05_danger.txt  ardennes07_danger.txt  beauvechain_ctr.txt  beauvechain_tma1.txt  beauvechain_tma1a.txt  beauvechain_tma1b.txt  beauvechain_tma2.txt  beauvechain_tma3.txt  beauvechain_tma4.txt  beauvechain_tma5.txt  beloeil_sporting.txt  bertrix_area_danger.txt  bertrix_sporting.txt  beverlo01_danger.txt  beverlo02_danger.txt  brasschaat_danger.txt  brasschaat_sporting.txt  brussels_city_prohibited.txt  brussels_cta_east1.txt  (+137 more)
openair/france/: aisne_restricted.txt  albert_bray_ctr.txt  ardennes_restricted.txt  beauvais_tma1.txt  beauvais_tma21.txt  beauvais_tma22.txt  beauvais_tma3.txt  beauvais_tma4.txt  beauvais_tma5.txt  calais_ctr.txt  cambrai_ctr.txt  cambrai_tma1.txt  cambrai_tma2.txt  cambrai_tma3.txt  cambraisis_restricted.txt  cattenom_prohibited.txt  champagne_restricted.txt  chooz_prohibited.txt  creil_tma1.txt  creil_tma2.txt  creil_tma3.txt  damblain_restricted.txt  etain_rouvres_a_restricted.txt  etain_rouvres_b1_restricted.txt  etain_rouvres_b2_restricted.txt  etain_rouvres_b3_restricted.txt  etain_rouvres_c_restricted.txt  gostenquin_a_restricted.txt  gostenquin_b_restricted.txt  gravelines_prohibited.txt  lf_r4a_restricted.txt  lf_r4b_restricted.txt  lf_r4c_restricted.txt  lf_r4d_restricted.txt  lille_ctr.txt  lille_tma1.txt  lille_tma10.txt  lille_tma11.txt  lille_tma12.txt  lille_tma13.txt  (+51 more)
openair/germany/: baumholder_restricted.txt  berneustadt.txt  bochum.txt  buechel_ctr.txt  daaden_r114a.txt  daaden_r114b.txt  dortmund_ctr.txt  dortmund_gpa.txt  dortmund_gpb.txt  dortmund_gpc.txt  dortmund_gpd.txt  dortmund_w.txt  duesseldorf_ctr.txt  geilenkirchen_ctr.txt  german_border.txt  hahn_ctr.txt  hahn_da.txt  hahn_db.txt  hahn_dc.txt  hahn_dd.txt  hahn_de.txt  hahn_df.txt  hahn_sud.txt  juelich_restricted.txt  koeln_ca.txt  koeln_cb.txt  koeln_cc.txt  koeln_cd.txt  koeln_ce.txt  koeln_cf.txt  koeln_cg.txt  koeln_ch.txt  koeln_ci.txt  koeln_cj.txt  koeln_ck.txt  koeln_cl.txt  koeln_cm.txt  koeln_cn.txt  koeln_co.txt  koeln_cp.txt  (+20 more)
openair/luxembourg/: luxembourg_ctr.txt  luxembourg_tma1a.txt  luxembourg_tma1b.txt  luxembourg_tma2a.txt  luxembourg_tma2b.txt  luxembourg_tma2c.txt  luxembourg_tma2d.txt  luxembourg_tma2e.txt  luxembourg_tma2f.txt  luxembourg_tma3.txt  luxembourg_tma4.txt  luxembourg_tma5.txt
openair/netherlands/: EHD_01A_danger.txt  EHD_01_danger.txt  EHD_02A_danger.txt  EHD_02_danger.txt  EHD_03A_danger.txt  EHD_03_danger.txt  EHD_04A_danger.txt  EHD_04_danger.txt  EHD_05A_danger.txt  EHD_05_danger.txt  EHD_06A_danger.txt  EHD_06_danger.txt  EHD_07A_danger.txt  EHD_07_danger.txt  EHD_08A_danger.txt  EHD_08_danger.txt  EHD_09A_danger.txt  EHD_09_danger.txt  (+149 more)
openair_examples/: AirspaceBelgium2.txt  DA_positive.txt  DA_positive2.txt  DB_positive.txt  liege_ctr.txt  negative_arc.txt  one_arc.txt  only_circle.txt  two_arcs.txt  winpilot_example.txt
src/: Airspace.cpp  Airspace.h  Arc.cpp  Arc.h  CMakeLists.txt  Circle.cpp  Circle.h  Constants.h  Coordinate.cpp  Coordinate.h  CurvedPolygon.cpp  CurvedPolygon.h  EHD_41A_danger.kml  EHD_41B_danger.kml  EHD_41C_danger.kml  EHD_41D_danger.kml  EHD_41E_danger.kml  EHD_41F_danger.kml  EHD_42A_danger.kml  EHD_42B_danger.kml  EHD_42C_danger.kml  EHD_42D_danger.kml  EHD_49_breezanddijk_danger.kml  EHD_61_arnhemse_heide_danger.kml  EHD_62_reek_danger.kml  EHD_63_riel_danger.kml  GPXState.cpp  GPXState.h  GeometricShape.h  KMLState.cpp  KMLState.h  Label.cpp  Label.h  LatLon.cpp  LatLon.h  Latitude.cpp  Latitude.h  LinearSegment.cpp  LinearSegment.h  Longitude.cpp  (+53 more)
src/scanner/: lex.yy.c  mylexer.l  mylexer.y  readme.txt  test.txt  y.tab.c  y.tab.h
src/test/: HeaderTest.cpp  HeaderTest.h  LatLonTest.cpp  MainTester.cpp  Makefile  ParserTest.cpp  ParserTest.h
test/: AirSpaceTest.cpp  AirSpaceTest.h  AirspaceTest.cpp  AirspaceTest.h  ArcTest.cpp  ArcTest.h  CMakeLists.txt  CoordinateTest.cpp  CoordinateTest.h  HeaderTest.cpp  LatLonTest.cpp  LatLonTest.h  LatitudeTest.cpp  LatitudeTest.h  LongitudeTest.cpp  LongitudeTest.h  MainTester.cpp  ParserTest.cpp  ParserTest.h  convert_examples.sh
third_party_data/: belgium.poly
utils/: convert_borderdata.sh  convert_polyfile.awk  create_zip_package.sh  extract_maps.sh  make_belgium.sh
xc_routes/: xc_routes.gpx
(+265 files in other folders)
